moved post images to /img/posts/

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: blog
-title: Blog and guide about Dordogne France
-description: A Blog and local guide about Dordogne France that helps you find the hidden gems of the beautiful region
-keywords: villa in france, cottage in france, cottage, villa, france, gite, pool, dordogne, self catering, holiday, family, kids, quality, value, flexible, full kitchen, towels, bed linen, perigord noir, gites, le bugue, sarlat, perigueux, shooping, markets, history, world heritage sites, pre-historic, caves, chateaux, medieval towns, bastides, peaceful, canoeing, golf, bikes, walking, aquarium, fine wines, bordeaux, bergerac, wonderful food, foie gras, duck, truffles
+title: Blog about bread for thoughts and stuff
+description: A blob about bread - food for thoughts and anything that comes under my radar
+keywords: france, tourism in france, dordogne, rentals, villas, cottages, apple, steve jobs, technology, holiday in france, villa in france, perigord, perigord noir, books, yoga, health, food, natural food, paleo
 ---
